CHANGES IN VERSION 1.8.10
-------------------------
BUG FIX
    o Support non human BSgenome. Issue: #197
    o SampleID bug fix. Issue: #153

CHANGES IN VERSION 1.8.0
-------------------------
NEW FUNCTIONS
    o OncogenicPathways - Perform enrichment for known oncogenic pathways from TCGA studies.
    o PlotOncogenicPathways - Plots OncogenicPathways results
    o drugInteractions - Drug gene interactions from DGIB database.

SIGNIFICANT USER-LEVEL IMPROVEMENT
    o trinucleotideMatrix functions now works with BSgenomes instead of time consuming fasta files
    o rainfallPlot now detects Kataegis based on a greedy algorithm