@@ -1,3 +1,5 @@
+Meta
+doc
 proj.user
 .Rhistory
 .RData
